--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "react-dom": "18.2.0",
     "react-wrap-balancer": "^1.1.0",
     "rehype-autolink-headings": "^6.1.1",
+    "rehype-katex": "^6.0.3",
     "rehype-pretty-code": "^0.10.1",
     "rehype-slug": "^5.1.0",
     "remark-gfm": "^3.0.1",
+    "remark-math": "^5.1.1",
     "typescript": "5.1.6"
   },
   "devDependencies": {
