--- a/package.json
+++ b/package.json
@@ -1,47 +1,56 @@
 {
-  "name": "chronark.com",
-  "version": "0.1.0",
+  "name": "yanisriani.fr",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "fmt": "pnpm rome check . --apply-suggested && pnpm rome format . --write"
+    "fmt": "pnpm rome check . --apply-unsafe && pnpm rome format . --write"
   },
   "dependencies": {
-    "@next/mdx": "^13.4.19",
-    "@types/node": "20.3.2",
-    "@types/react": "18.2.14",
-    "@types/react-dom": "18.2.6",
-    "@upstash/redis": "^1.22.0",
+    "@next/mdx": "^14.0.4",
+    "@types/node": "20.10.5",
+    "@types/react": "18.2.46",
+    "@types/react-dom": "18.2.18",
+    "@upstash/redis": "^1.27.1",
     "contentlayer": "^0.3.4",
-    "esbuild": "~0.18.20",
-    "framer-motion": "^10.16.2",
-    "lucide-react": "^0.257.0",
+    "esbuild": "~0.19.11",
+    "framer-motion": "^10.16.16",
+    "lucide-react": "^0.303.0",
     "markdown-wasm": "^1.2.0",
-    "next": "13.4.7",
+    "next": "14.0.4",
     "next-contentlayer": "^0.3.4",
     "postcss-import": "^15.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-wrap-balancer": "^1.1.0",
-    "rehype-autolink-headings": "^6.1.1",
-    "rehype-katex": "^6.0.3",
-    "rehype-pretty-code": "^0.10.1",
-    "rehype-slug": "^5.1.0",
-    "remark-gfm": "^3.0.1",
-    "remark-math": "^5.1.1",
-    "typescript": "5.1.6"
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-katex": "^7.0.0",
+    "rehype-pretty-code": "^0.12.3",
+    "rehype-slug": "^6.0.0",
+    "remark-gfm": "^4.0.0",
+    "remark-math": "^6.0.0",
+    "typescript": "5.3.3"
   },
   "devDependencies": {
-    "@opentelemetry/api": "^1.4.1",
+    "@opentelemetry/api": "^1.7.0",
     "@tailwindcss/line-clamp": "^0.4.4",
-    "@tailwindcss/typography": "^0.5.9",
-    "autoprefixer": "^10.4.15",
-    "postcss": "^8.4.29",
-    "postcss-nesting": "^11.3.0",
+    "@tailwindcss/typography": "^0.5.10",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "postcss-nesting": "^12.0.2",
     "rome": "^12.1.3",
-    "tailwindcss": "^3.3.3",
+    "tailwindcss": "^3.4.0",
     "tailwindcss-debug-screens": "^2.2.1"
+  },
+  "overrides": {
+    "next-contentlayer": {
+      "next": "$next"
+    },
+    "contentlayer": {
+      "@opentelemetry/api": "1.4.x",
+      "esbuild": "0.19.x"
+    }
   }
 }
