Refactor / Techstack update with iconify icons

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,10 +38,13 @@
         "styles/*"
       ],
       "@public/*": [
-        "public/*"
+        "../public/*"
       ],
       "@content/*": [
         "content/*"
+      ],
+      "@iconify/*": [
+        "_iconify/*"
       ],
       "contentlayer/generated": [
         "../.contentlayer/generated"
