--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "build:icons": "node src/_iconify/build-icons.js",
     "start": "next start",
     "fmt": "pnpm rome check . --apply-unsafe && pnpm rome format . --write"
   },
   "dependencies": {
+    "@iconify/react": "^4.1.1",
     "@next/mdx": "^14.0.4",
     "@types/node": "20.10.5",
     "@types/react": "18.2.46",
@@ -34,6 +36,11 @@
     "typescript": "5.3.3"
   },
   "devDependencies": {
+    "@iconify-json/logos": "^1.1.42",
+    "@iconify/iconify": "^3.1.1",
+    "@iconify/json": "^2.2.163",
+    "@iconify/tools": "^4.0.0",
+    "@iconify/utils": "^2.1.14",
     "@opentelemetry/api": "^1.7.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.10",
