Add / resume page

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -43,6 +43,9 @@
       "@content/*": [
         "content/*"
       ],
+      "@localtypes/*": [
+        "types/*"
+      ],
       "@iconify/*": [
         "_iconify/*"
       ],
