--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "postcss-import": "^15.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-responsive": "^9.0.2",
     "react-wrap-balancer": "^1.1.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-katex": "^7.0.0",
@@ -33,6 +34,7 @@
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.0",
     "remark-math": "^6.0.0",
+    "sharp": "^0.33.2",
     "typescript": "5.3.3"
   },
   "devDependencies": {
