--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "typescript": "5.3.3"
   },
   "devDependencies": {
+    "@iconify-json/devicon": "^1.1.35",
     "@iconify-json/logos": "^1.1.42",
     "@iconify/iconify": "^3.1.1",
     "@iconify/json": "^2.2.163",
