--- a/package.json
+++ b/package.json
@@ -11,56 +11,47 @@
   },
   "dependencies": {
     "@iconify/react": "^4.1.1",
-    "@next/mdx": "^14.1.0",
+    "@next/mdx": "^14.2.13",
     "@types/node": "20.10.5",
     "@types/react": "18.2.46",
     "@types/react-dom": "18.2.18",
-    "@upstash/redis": "^1.28.2",
-    "contentlayer": "^0.3.4",
+    "@upstash/redis": "^1.34.0",
+    "contentlayer2": "^0.4.6",
     "esbuild": "~0.19.12",
     "framer-motion": "^10.18.0",
     "lucide-react": "^0.303.0",
     "markdown-wasm": "^1.2.0",
     "next": "14.1.0",
-    "next-contentlayer": "^0.3.4",
+    "next-contentlayer2": "^0.4.6",
     "postcss-import": "^15.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-responsive": "^9.0.2",
-    "react-wrap-balancer": "^1.1.0",
+    "react-wrap-balancer": "^1.1.1",
     "rehype-autolink-headings": "^7.1.0",
-    "rehype-katex": "^7.0.0",
+    "rehype-katex": "^7.0.1",
     "rehype-pretty-code": "^0.12.6",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.0",
     "remark-math": "^6.0.0",
-    "sharp": "^0.33.2",
+    "sharp": "^0.33.5",
     "typescript": "5.3.3"
   },
   "devDependencies": {
-    "@iconify-json/devicon": "^1.1.35",
-    "@iconify-json/logos": "^1.1.42",
+    "@iconify-json/devicon": "^1.2.2",
+    "@iconify-json/logos": "^1.2.0",
     "@iconify/iconify": "^3.1.1",
-    "@iconify/json": "^2.2.175",
-    "@iconify/tools": "^4.0.0",
-    "@iconify/utils": "^2.1.20",
-    "@opentelemetry/api": "^1.7.0",
+    "@iconify/json": "^2.2.254",
+    "@iconify/tools": "^4.0.7",
+    "@iconify/utils": "^2.1.33",
+    "@opentelemetry/api": "^1.9.0",
     "@tailwindcss/line-clamp": "^0.4.4",
-    "@tailwindcss/typography": "^0.5.10",
-    "autoprefixer": "^10.4.17",
-    "postcss": "^8.4.33",
-    "postcss-nesting": "^12.0.2",
+    "@tailwindcss/typography": "^0.5.15",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "postcss-nesting": "^12.1.5",
     "rome": "^12.1.3",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.13",
     "tailwindcss-debug-screens": "^2.2.1"
-  },
-  "overrides": {
-    "next-contentlayer": {
-      "next": "$next"
-    },
-    "contentlayer": {
-      "@opentelemetry/api": "1.4.x",
-      "esbuild": "0.19.x"
-    }
   }
 }
