--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Build and publish the image
         run: |
           docker login --username do-map --password ${{ secrets.GH_PAT }} ghcr.io
-          docker build ./Server/ -t ghcr.io/domap-fr/porfolio:lts
+          docker build ./ -t ghcr.io/domap-fr/porfolio:lts
           docker push ghcr.io/domap-fr/porfolio:lts
   deploy:
     runs-on: ubuntu-latest
