--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -12,7 +12,7 @@ jobs:
         run: |
           docker login --username do-map --password ${{ secrets.GH_PAT }} ghcr.io
           docker build --build-arg UPSTASH_REDIS_REST_URL=${{ secrets.UPSTASH_URL }} --build-arg UPSTASH_REDIS_REST_TOKEN=${{ secrets.UPSTASH_TOKEN }} ./ -t ghcr.io/domap-fr/porfolio:lts
-          docker push ghcr.io/Yanis-Riani/porfolio:lts
+          docker push ghcr.io/yanis-riani/porfolio:lts
   deploy:
     needs: build
     runs-on: ubuntu-latest
