--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "18.2.18",
     "@upstash/redis": "^1.34.0",
     "contentlayer2": "^0.4.6",
+    "dayjs": "^1.11.13",
     "esbuild": "~0.19.12",
     "framer-motion": "^10.18.0",
     "lucide-react": "^0.303.0",
